<resources>
    <string name="title_main">Home</string>
    <string name="title_magazines">Magazines</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>

    <string name="app_name">МЕДИА СФЕРА</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="top_banner_title">Архив патологии</string>
    <string name="top_banner_title_caption">том 72, №1 (2018)</string>
    <string name="top_banner_btn_left">Журнал</string>
    <string name="top_banner_btn_right">Интересно</string>
    <string name="top_banner_numbers_1">20</string>
    <string name="top_banner_numbers_1_caption">лет</string>
    <string name="top_banner_numbers_2">339</string>
    <string name="top_banner_numbers_2_caption">цитирований</string>
    <string name="top_banner_numbers_3">444</string>
    <string name="top_banner_numbers_3_caption">выпусков</string>
    <string name="top_banner_numbers_4">286</string>
    <string name="top_banner_numbers_4_caption">статей</string>
    <string name="open_articles">Открытые статьи</string>
    <string name="last_magazine">Последние журналы</string>

    <string name="magazine1_discription">Молекулярно – биологическая характеристика возбудителя и патологоанатомические
        аспекты летальных исходов от туберкулеза в Иркутске 2008–2011 гг.
    </string>
    <string name="magazine2_discription">Патологоанатомические аспекты летальных исходов от туберкулеза</string>
    <string name="magazine1_data">21.09.19</string>
    <string name="magazine2_data">16.12.18</string>
    <string name="magazine_1">Журнал 1</string>

    <string name="publication_banner">Публикация в международных и российских библиографических базах данных</string>
    <string name="logo3">Medline</string>
    <string name="logo4">ScienceIndex</string>
    <string name="logo2">Google Scholar</string>
    <string name="logo1">Scopus</string>

    <string name="tabbar1">Мои подписки</string>
    <string name="tabbar2">Все журналы</string>
    <string name="tabbar3">Поиск</string>
    <string name="tabbar4">Аккаунт</string>

    <string name="all_magazines">Все журналы</string>
    <string name="search_page">Поиск</string>
    <string name="account_page">Аккаунт</string>

    <string name="qr_hint">QR код</string>
    <string name="logo_name">Логотип медиасферы</string>

    <string name="main_tab_1">Читаю</string>
    <string name="main_tab_2">Отложенные</string>
    <string name="main_tab_3">Архив</string>

    <string name="main_tab_2_title">Отложенные журналы и статьи</string>
    <string name="main_tab_3_title">Архив журналов и статей</string>
    <string name="now_read">Сейчас читают</string>
    <string name="discription_btn_all_magazines">Для начала чтения приобретите журнал в нашей библиотеке</string>
    <string name="discription_btn_login">или войдите в вашу учетную запись</string>
    <string name="black_btn_all_magazines">Все журналы</string>
    <string name="orange_btn_login">Регистрация / Вход</string>
    <string name="book_description">Книга</string>
    <string name="arrow_btn_description">Стрелка перейти по со кнопке</string>

    <string name="card_name">Оперативная хирургия и клиническая анатомия</string>
    <string name="card_number">том 72, №1 (2018)</string>
    <string name="card_discription">Журнал основан в 1935 году, является одним из старейших периодических медицинских изданий в России.</string>
    <string name="card_image_discription">Обложка журнала</string>

    <string name="cards_archive_available">Вам доступен архив</string>
    <string name="card_magazine_deferred">Отложенные журналы и статьи</string>
    <string name="card_magazine_archive">Архив журналов и статей</string>
    <string name="back_hint">Назад</string>

    <string name="edit_text_name">Добавьте ваше имя</string>
    <string name="edit_text_mail">Добавьте вашу почту</string>
    <string name="user_avatar">user avatar</string>
    <string name="accaunt_title">Аккаунт</string>
    <string name="edit_text_password">Введите пароль</string>
    <string name="edit_text_confirm_password">Повторите пароль</string>
    <string name="signInBtn">Зарегистрироваться</string>
    <string name="languageBtn">Язык</string>
    <string name="restoreBtn">Восстановить покупки</string>
    <string name="profileBtn">Мои данные</string>
    <string name="detailMagazineBackground">Обложка на заднем фоне</string>
    <string name="setting_sun">Настройки</string>
    <string name="textSignUpBtn">Уже есть аккаунт?</string>
    <string name="signUpBnt">Войдите</string>
    <string name="subscribe">Оформить подписку</string>
    <string name="btn_last_number">Последний номер</string>
    <string name="btn_archive_magazines">Архив журнала</string>
    <string name="buscet_icon_description">Оформить подписку</string>
    <string name="last_magazine_description">Иконка меню с точками</string>
    <string name="copy_doc_description">Архив журналов</string>
    <string name="detail_magazine_caption_start">В ахиве доступны</string>
    <string name="detail_magazine_caption_finish">выпуски за прошлые года</string>
    <string name="detail_magazine_caption_orange">бесплатные</string>
    <string name="detail_title_top">О журнале</string>
    <string name="detail_magazine_title_h2">Журнал размещен в базах:</string>
    <string name="logo_image">картинка логотипа</string>
    <string name="founders">Учредители:</string>
    <string name="magazine_content">Содержание</string>
    <string name="content_magazine_description">В соответствии с политикой издательства, в каждом новом выпуске одна статья (наиболее интересная по мнению редакции) выкладывается в открытом доступе</string>
    <string name="bookmark_icon">bookmark icon</string>
    <string name="article_price">Купить за 530 руб.</string>
</resources>
