<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/magazineCover"
                android:layout_width="105dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/card_image_discription"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/magazine2" />

            <TextView
                android:id="@+id/magazineName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="12dp"
                android:layout_toEndOf="@+id/magazineCover"
                android:text="@string/card_name"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/magazineInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/magazineName"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/magazineCover"
                android:text="@string/card_number"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/magazineDiscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/magazineInfo"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/magazineCover"
                android:text="@string/card_discription"
                android:textSize="14sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
