<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/card_bottom_line" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorLightBg"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        card_view:cardBackgroundColor="@color/cardview_light_background"
        card_view:ignore="PrivateResource">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/magazineCover2"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/magazine_1"
                android:src="@drawable/magazine2" />

            <TextView
                android:id="@+id/magazineName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/magazine2_discription"
                android:textSize="10sp"
                card_view:ignore="SmallSp" />

            <TextView
                android:id="@+id/magazineInfo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magazine2_data"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold"
                card_view:ignore="SmallSp" />

            <TextView
                android:id="@+id/magazineDiscription2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/card_discription"
                android:textSize="8sp"
                card_view:ignore="SmallSp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
