<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/account_top_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightBg"
        android:orientation="vertical"
        android:paddingBottom="12dp">

        <LinearLayout
            android:id="@+id/account_heading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/account_title"
                android:layout_width="0dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accaunt_title"/>
<!--            <ImageView-->
<!--                android:id="@+id/test_account_avatar"-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:src="@drawable/camera"-->
<!--                android:background="@drawable/circle"-->
<!--                android:contentDescription="@string/user_avatar" />-->
<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="50dp"-->
<!--                app:cardPreventCornerOverlap="false"-->
<!--                app:cardCornerRadius="25dp">-->
<!--                <ImageView-->
<!--                    android:id="@+id/account_avatar"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:contentDescription="@string/user_avatar"-->
<!--                    android:scaleType="centerCrop"-->
<!--                    android:src="@drawable/camera" />-->
<!--            </androidx.cardview.widget.CardView>-->
            <de.hdodenhof.circleimageview.CircleImageView
                app:civ_border_width="1dp"
                app:civ_border_color="#d1d1d1"
                android:id="@+id/account_avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/user_avatar"
                android:scaleType="centerCrop"
                android:src="@drawable/camera" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/profileBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal"
                android:clickable="true"
                android:onClick="loginSignUpUser"
                android:text="@string/profileBtn"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="30dp"
                android:paddingEnd="40dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/text_lines_top_bottom"
                android:focusable="true"
                android:drawablePadding="10dp"
                android:gravity="start"
                app:drawableLeftCompat="@drawable/ic_avatar"/>
            <TextView
                android:id="@+id/languageBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal"
                android:clickable="true"
                android:onClick="loginSignUpUser"
                android:text="@string/languageBtn"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="30dp"
                android:paddingEnd="40dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/text_lines_top_bottom"
                android:focusable="true"
                android:drawablePadding="10dp"
                android:gravity="start"
                app:drawableLeftCompat="@drawable/text_t" />
            <TextView
                android:id="@+id/restoreBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal"
                android:clickable="true"
                android:onClick="loginSignUpUser"
                android:text="@string/restoreBtn"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingStart="30dp"
                android:paddingEnd="40dp"
                android:background="@drawable/text_lines_top_bottom"
                android:focusable="true"
                android:drawablePadding="10dp"
                android:gravity="start"
                app:drawableLeftCompat="@drawable/remove_from_cart" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>